--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,7 +34,7 @@ main {
     width: 90%;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    /* gap: 2rem; */
 }
 
 .post__create {
@@ -48,6 +48,7 @@ main {
 
 .profile {
     display: flex;
+    flex-direction: row;
     align-items: center;
     gap: 1rem;
 }
@@ -115,7 +116,7 @@ main {
     padding-top: 16px;
 }
 
-.post__create > form > button {
+.button__post {
     font-weight: var(--font-weight-2);
     color: var(--color-grey-3);
 
@@ -130,7 +131,7 @@ main {
     align-self: flex-end;
 }
 
-#post__button--active {
+.button__post--active {
     color: var(--color-white);
 
     background-color: var(--color-brand-1);
@@ -138,7 +139,7 @@ main {
     border-color: 2px solid var(--color-brand-1);
 }
 
-#post__button--active:hover {
+.button__post--active:hover {
     background-color: var(--color-brand-2);
 }
 
@@ -146,8 +147,6 @@ aside {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-
-    margin-top: 2rem;
 }
 
 aside > h3 {
@@ -163,6 +162,20 @@ aside > h3 {
     overflow-x: scroll;
     gap: 5rem;
 }
+
+.profile__list > .profile {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    min-width: fit-content;
+}
+
+.profile__list > .profile > div {
+    display: flex;
+    gap: 1rem;
+}
+
 
 .profile__follow {
     font-weight: var(--font-weight-2);
@@ -195,9 +208,22 @@ aside > h3 {
     border-radius: 2px;
 }
 
+.following {
+    color: var(--color-white);
+
+    background-color: var(--color-brand-1);
+
+    border: 1px solid var(--color-brand-1);
+    /* border-radius: 2px;  */
+}
+
+.following:hover {
+    color: var(--color-white);
+}
+
 .posts__section {
     width: 90%;
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 .posts__section > h2 {
@@ -263,14 +289,24 @@ i {
 }
 
 dialog {
-    /* border: none; */
+    border: none;
     border-radius: var(--radius-2);
 
     width: 800px;
     max-width: 80%;
+
+    margin: 0 auto;
+
+    position: fixed;
+    top: 50px;
+
+    justify-self: flex-start;
+    align-self: flex-start;
 }
 
 .dialog__container {
+    padding: 2rem;
+
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -289,12 +325,11 @@ dialog {
     font-size: var(--font-title-1);
 }
 
+.btn__close:hover {
+    cursor: pointer;
+}
+
 @media screen and (min-width: 769px) {
-    /* main {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-    } */
     .main__header {
         display: flex;
         flex-direction: row;
@@ -302,11 +337,11 @@ dialog {
         flex-wrap: wrap;
     }
     .post__create {
-        width: 600px;
+        width: 700px;
         max-width: 50%;
     }
     .post__create > form > input, .post__create > form > textarea {
-        max-width: 600px;
+        max-width: 700px;
     }
     aside {
         gap: 2rem;
@@ -316,18 +351,20 @@ dialog {
         top: 100px;
         z-index: 0;
 
-        overflow-x: hidden;
-
         min-width: fit-content;
 
-        max-width: 30%;
+        max-width: 25%;
     }
     .profile__list {
         flex-direction: column;
-        gap: 2rem;
+        gap: 1rem;
+        overflow-x: hidden;
     }
     .profile__list > .profile {
+        gap: 1rem;
+        flex-direction: row;
         justify-content: space-between;
+        align-items: center;
     }
     .posts__section {
         justify-self: flex-end;
@@ -337,6 +374,9 @@ dialog {
         max-width: 55%;
 
         margin: 0;
+    }
+    dialog {
+        top: 100px;
     }
 }
 
